align dropdown menus correctly
Former-commit-id: 13e1da73fa99062422133a2485b4278c79130881

--- a/output/theme/scss/main.css
+++ b/output/theme/scss/main.css
@@ -200,6 +200,10 @@ nav {
     nav a.dropdown-item:hover {
       background-size: 100% 2px; }
   nav .dropdown-menu {
+    width: max-content; }
+  nav .dropdown:first-of-type > .dropdown-menu {
+    left: 0; }
+  nav .dropdown:last-of-type > .dropdown-menu {
     right: 0; }
   nav #logo {
     position: relative;
